--- a/.devcontainer/02_intermediate/dom.html
+++ b/.devcontainer/02_intermediate/dom.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     
     <title>DOM Learning</title>
+    <style>
+        .bg-red{
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-red">
-        <h1 class="heading"> DOM learning on own </h1>
+<body class="bg-red">
+    <div>
+        <h1 id="title"class="heading"> DOM learning on own <span style="display: none;"> test on own</span> </h1>
+        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet. </p>
     </div>
     
