dom updated practice

--- a/.devcontainer/02_intermediate/dom.html
+++ b/.devcontainer/02_intermediate/dom.html
@@ -20,6 +20,12 @@
         <h2>Lorem, ipsum dolor.</h2>
         <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet. </p>
+
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
     </div>
     
 </body>
