--- a/.devcontainer/02_intermediate/dom.html
+++ b/.devcontainer/02_intermediate/dom.html
@@ -21,10 +21,11 @@
         <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet. </p>
 
-        <ul>
+        <ul class = "list-item">
             <li>one</li>
             <li>two</li>
             <li>three</li>
+            <li>Four</li>
         </ul>
     </div>
     
