--- a/.devcontainer/02_intermediate/dom2.html
+++ b/.devcontainer/02_intermediate/dom2.html
@@ -21,14 +21,24 @@
 </body>
 <script>
     const parent = document.querySelector('.parent')            // this is HTML collection type
-    console.log(parent);                                        // we can use this as array like 
-    console.log(parent.children);
-    console.log(parent.children[0].innerHTML);
+    // console.log(parent);                                        // we can use this as array like 
+    // console.log(parent.children);
+    // console.log(parent.children[0].innerHTML);
 
     // for (let i = 0; i < parent.children.length; i++) {
     //     console.log(parent.children[i].innerHTML);
         
     // }
+    parent.children[1].style.color = 'orange'
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+    const dayOne = document.querySelector('.day')
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);
+    // console.log(dayOne.nextElementSibling);
+
+    console.log("NODES: ", parent.childNodes);
 
     
 </script>
